# plapperkasten

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  run.sh  setup.cfg  setup.py  test.sh
src/boxhead/: boxhead.py  config.py  event.py  eventmap.py  keymap.py  plugin.py
src/boxhead/boxheadlogging/: boxheadlogging.py
src/boxhead/log/: log.py
src/boxhead/plugins/autoshutdown/: autoshutdown.py
src/boxhead/plugins/example/: example.py
src/boxhead/plugins/inputdevinputevent/: config.yaml  inputdevinputevent.py
src/boxhead/plugins/inputgpiod/: config.yaml  inputgpiod.py
src/boxhead/plugins/soundeffects/: config.yaml  soundeffects.py
src/boxhead/plugins/soundeffects/sounds/: attribution
src/boxhead/settings/: config.yaml
src/plapperkasten/: config.py  event.py  eventmap.py  keymap.py  plapperkasten.py  plugin.py
src/plapperkasten/plapperkastenlogging/: plapperkastenlogging.py
src/plapperkasten/plklogging/: plklogging.py
src/plapperkasten/plugins/autoshutdown/: autoshutdown.py  config.yaml
src/plapperkasten/plugins/example/: config.yaml  example.py
src/plapperkasten/plugins/inputdevinputevent/: config.yaml  inputdevinputevent.py
src/plapperkasten/plugins/inputgpiod/: config.yaml  inputgpiod.py
src/plapperkasten/plugins/mpdclient/: config.yaml  mpdclient.py  statusmap.py
src/plapperkasten/plugins/soundalsa/: config.yaml  soundalsa.py  statusmap.py
src/plapperkasten/plugins/soundeffects/: config.yaml  soundeffects.py
src/plapperkasten/plugins/soundeffects/sounds/: attribution
src/plapperkasten/plugins/soundpwwp/: config.yaml  soundpwwp.py
src/plapperkasten/plugins/volumealsa/: config.yaml  volumealsa.py
src/plapperkasten/settings/: config.yaml
tests/: test_config.py
