[project]
name = 'boxhead'
version = '0.1.0'
description = ''
readme = 'README.md'
requires-python = '>=3.9'
license = 'The Unlicense'
authors = [
{name = 'Eike Christian Kühn', email = 'eike.kuehn@pixelwoelkchen.de'},
]
maintainers = [
{name = 'Eike Christian Kühn', email = 'eike.kuehn@pixelwoelkchen.de'},
]
classifiers = [
    'License :: OSI Approved :: The Unlicense (Unlicense)',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3 :: Only',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python'
]
dependencies = [
    'pyyaml~=6.0',
    'evdev~=1.4.0'
]

[project.optional-dependencies]
inputgpiod = [
    'gpiodmonitor~=1.1.2'
]

[project.urls]
homepage = 'https://github.com/randomchars42/boxhead'
documentation = 'https://github.com/randomchars42/boxhead'
source = 'https://github.com/randomchars42/boxhead'
tracker = 'https://github.com/randomchars42/boxhead/issues'

[project.scripts]
boxhead = 'boxhead.boxhead:main'

[build-system]
requires = [
    'build~=0.7.0',
    'docutils~=0.18.1',
    'wheel~=0.37.1',
    'setuptools~=60.6.0',
    'twine~=3.8.0',
    'types-setuptools~=57.4.8',
    'types-pyyaml~=6.0.4',
    'types-pkg-resources~=0.1.3',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
# add .venv to the mypy path to detect imported packages installed by
# pipenv
# update the path locally to match your settings, i.e. change the
# python version and the path to the venv as it currently depends on
# `export PIPENV_VENV_IN_PROJECT=1` being set
mypy_path = '$MYPY_CONFIG_FILE_DIR/.venv/lib/python3.9/site-packages/:$MYPY_CONFIG_FILE_DIR/src'
