[metadata]
name = boxhead
version = 0.1.0

[options]
install_requires =
    pyyaml~=6.0
    evdev~=1.4.0
    python-mpd2~=3.0.5
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    boxhead = boxhead.boxhead:main

[options.extras_require]
inputgpiod = gpiodmonitor~=1.1.2

[options.package_data]
* = *.yaml, *.map, *.wav
